Btn visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ button {
     background-color:  rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border: 0;
-    padding: 0 1rem;
+    
 }
 
 #button-controls {
@@ -23,6 +23,7 @@ button {
 .btn-control {
     background-color: rgb(89, 240, 119);
     color: rgb(0, 0, 0);
+    padding: 1rem 4rem;
 }
 
 #lives {
@@ -104,3 +105,10 @@ audio {
 a {
     color: rgb(89, 240, 119);
 }
+
+@media (min-width: 700px) {
+    
+    #button-controls {
+        visibility: hidden;
+    }
+  }
